--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,11 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme             : mmistakes/minimal-mistakes
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+url                      : "https://hawitcher.github.io/index.html" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "https://hawitcher.github.io/hablog" # the subpath of your site, e.g. "/blog"
 
 # Site Settings
 locale                   : "en-US"
